Bug 283475 - KDE Dolphin seems not to manage properly .desktop files with URL's
Summary: KDE Dolphin seems not to manage properly .desktop files with URL's
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: testcase
: 280706 315102 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-06 14:55 UTC by Lluis Garrido
Modified: 2017-06-15 13:24 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.0
Sentry Crash Report:


Attachments
A .desktop file for testing. (156 bytes, application/x-desktop)
2012-11-03 01:48 UTC, Bryan Cuneo
Details
This is what happens, showing the blue info message and the popup. (133.32 KB, image/png)
2012-11-03 01:50 UTC, Bryan Cuneo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lluis Garrido 2011-10-06 14:55:06 UTC
Version:           1.6.1 (using KDE 4.6.5) 
OS:                Linux

Dear all,

Here is a description of my problem:

I usually use .desktop files to organize my web links instead of using the
bookmarks of Firefox. For instance, here is a .desktop file I have stored under
~/teaching

[Desktop Entry]
Icon=text-html
Name=http://en.wikipedia.org/wiki/Shunting_yard_algorithm
Type=Link
URL[$e]=http://en.wikipedia.org/wiki/Shunting_yard_algorithm

In order to test it you may just save this text (without leading blank lines)
in a file called ShuntingYard.desktop and save it e.g. under folder ~/teaching.

Then perform as follows

1) Open file manager (Dolphin)
2) Go to folder "teaching"
3) Click onto the ShuntingYard.desktop file to open it
4) Dolphin opens Firefox with the Link (as expected) but
   if you look at Dolphin current directory you'll see that
   it has tried to open the folder

http:en.wikipedia.org/wiki/Shunting_yard_algorithm

which is not the correct behavior since Dolphin does not support HTML
web browsing.

Best,

Luis 

Reproducible: Always

Reproducible: Always

Steps to Reproduce:
Any desktop file that is openened from Dolphin application is not managed properly. This problem cannot be seen if desktop files are opened e.g. from the folder view of the desktop.


Expected Results:  
Dolphin should not try to go to the folder indicated in the URL. It should just redirect the request to firefox.
Comment 1 Jekyll Wu 2011-10-27 00:16:51 UTC
This sounds similar to bug 280706 .
Comment 2 Jekyll Wu 2011-12-09 05:45:15 UTC
[from bug 280706]

when you click on an URL file it will be opened on the default browser and...
the dolphin bar is changed to the URL address, moreover the dolphin view type
is set to "list view" and the sorting is always set to the filename column.
Comment 3 Jekyll Wu 2011-12-09 05:45:54 UTC
*** Bug 280706 has been marked as a duplicate of this bug. ***
Comment 4 Vianney Stroebel 2012-04-25 13:28:47 UTC
I confirm this bug on Kubuntu 11.10.

Note that the same Link .desktop files (that don't work in Dolphin) do work when clicked from a Folder View widget on a desktop.

How come such a critical bug declared more than six months ago doesn't get any attention?

URL link handling in a file browser seems like a basic feature to me. They're the only practical way to reference a web resource in you filesystem without having to download and duplicate the resource (which is not a good option when it is a video or a wiki page).

Is there any way we can draw the developers attention to a bug besides voting on it? Sorry if this question has been answered elsewhere, I'm quite new tho the KDE community.

Vianney
Comment 5 Vianney Stroebel 2012-04-25 13:52:56 UTC
Also, note that when I click on a "Type=Link" .desktop file in Dolphin, a warning message box is displayed with the message "Could not find the program 'firefox.desktop'"

Vianney
Comment 6 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:21:34 UTC
Resetting assignee to default as per bug #305719
Comment 7 Bryan Cuneo 2012-11-03 01:37:09 UTC
[Part of the Dolphin Bug Weeks 2012]
I can confirm both the reported issue and the problem mentioned in comment 5 using Dolphin 2.1/KDE SC 4.9.2 (Kubuntu 12.10 package). In the case of the first, I get a notification that Dolphin doesn't support Web pages and the the Web browser has been launched. However, I get a popup that says "Could not find the program 'firefox.desktop.'" Note that there is a firefox.desktop in /usr/share/applications.
Comment 8 Bryan Cuneo 2012-11-03 01:48:13 UTC
Created attachment 74949 [details]
A .desktop file for testing.
Comment 9 Bryan Cuneo 2012-11-03 01:50:52 UTC
Created attachment 74950 [details]
This is what happens, showing the blue info message and the popup.
Comment 10 Frank Reininghaus 2013-05-12 20:26:36 UTC
*** Bug 315102 has been marked as a duplicate of this bug. ***
Comment 11 Emmanuel Pescosta 2013-07-26 13:06:28 UTC
Git commit f14352f141024040b615ab152c1b7b53729db9bd by Emmanuel Pescosta.
Committed on 26/07/2013 at 13:05.
Pushed by emmanuelp into branch 'KDE/4.11'.

Don't open .desktop files with http:/https: urls in Dolphin,
open these urls in the default browser instead.
Related: bug 318217
FIXED-IN: 4.11.0
REVIEW: 111674

M  +5    -2    dolphin/src/views/dolphinview.cpp

http://commits.kde.org/kde-baseapps/f14352f141024040b615ab152c1b7b53729db9bd
Comment 12 Christopher Yeleighton 2013-08-29 20:18:30 UTC
My Dolphin does not give me a pop-up message but it does acquire the URL for address; the error message is in the notification bar but there is nothing about firefox.desktop in it.
Comment 13 Christoph Feck 2013-09-12 13:18:43 UTC
Christopher, I am not sure I understand your comment. Do you think this bug should be reopened or the fix caused a regression?