Don't open .desktop files with http:/https: urls in Dolphin, open these urls in the default browser instead.

BUG: 283475
BUG: 318217
FIXED-IN: 4.11.0
REVIEW: 111674